--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     android:id="@+id/activity_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res/com.customview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.customview.MainActivity">
+    tools:context="com.customview.MainActivity"
+    android:orientation="vertical"
+    >
 
    <com.customview.widget.MoveView
        android:background="#aabbcc"
        android:layout_width="80dp"
        android:layout_height="80dp"
-       android:layout_margin="50dp"
+
        />
-</RelativeLayout>
+
+
+   <com.customview.widget.CustomTextView
+       android:id="@+id/custom_view"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       custom:titleText="自定义TextView"
+       custom:titleTextColor="#ff0000"
+       custom:titleTextSize="40sp"
+       custom:titleBackground="#000"
+       android:layout_marginTop="10dp"
+       />
+</LinearLayout>
