--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,6 @@
     xmlns:custom="http://schemas.android.com/apk/res/com.customview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.customview.MainActivity"
     android:orientation="vertical"
     >
@@ -31,5 +27,16 @@
        custom:titleTextSize="40sp"
        custom:titleBackground="#000"
        android:layout_marginTop="10dp"
+       />
+
+   <com.customview.widget.CustomImageView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       custom:imageTitle="ImageDescription"
+       custom:imageTitleColor="#aabbcc"
+       custom:imageTitleSize="30sp"
+       custom:image="@mipmap/ic_launcher"
+       custom:imageScaleType="center"
+       android:layout_margin="10dp"
        />
 </LinearLayout>
