--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -37,4 +37,20 @@
         <attr name="imageScaleType"/>
     </declare-styleable>
 
+
+
+    <!--自定义属性 对应CustomProgressBar -->
+    <attr name="firstColor" format="color"/>
+    <attr name="secondColor" format="color"/>
+    <attr name="circleWidth" format="dimension"/>
+    <attr name="speed"  format="integer"/>
+
+    <declare-styleable name="CustomProgress">
+        <attr name="firstColor"/>
+        <attr name="secondColor"/>
+        <attr name="circleWidth"/>
+        <attr name="speed"/>
+    </declare-styleable>
+
+
 </resources>
