--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,11 @@
        android:layout_width="100dp"
        android:layout_height="100dp"
       custom:circleWidth="10dp"
+       />
 
+   <com.customview.widget.CustomVolumControlBar
+       android:layout_width="150dp"
+       android:layout_height="150dp"
+       custom:volumBg="@mipmap/ic_launcher"
        />
 </LinearLayout>
